# auto_eda

./: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb
mds_array_manipulation/: pyproject.toml
mds_array_manipulation/docs/: example.ipynb  make.bat
src/mds_array_manipulation/: __init__.py  argmax.py  count_nonzero_elements.py  mds_array_manipulation.py  search_array.py  sort_array.py
tests/: conftest.py  test_argmax.py  test_count_nonzero_elements.py  test_mds_array_manipulation.py  test_search_array.py  test_sort_array.py
